--- a/Festival.html
+++ b/Festival.html
@@ -97,7 +97,7 @@
                     </p>
                 </div>
                 <div class="festival-article__image">
-                    <img src="/placeholder.svg?height=400&width=800" 
+                    <img src="/assets/img/notrehistoire1.avif" 
                          alt="Public du festival sur les berges" class="festival-article__img">
                 </div>
             </article>
@@ -128,7 +128,7 @@
 
                 <article class="team-card">
                     <div class="team-card__image">
-                        <img src="/assets/img/Jeanmartin.jpg" 
+                        <img src="/assets/img/jeanmartin1.avif" 
                              alt="Jean Martin" class="team-card__img">
                     </div>
                     <div class="team-card__content">
@@ -156,7 +156,7 @@
 
                 <article class="team-card">
                     <div class="team-card__image">
-                        <img src="/placeholder.svg?height=300&width=300" 
+                        <img src="/assets/img/jeanpetit.avif" 
                              alt="Lucas Petit" class="team-card__img">
                     </div>
                     <div class="team-card__content">
@@ -178,19 +178,18 @@
             <div class="charter">
                 <article class="charter-item">
                     <div class="charter-item__icon">
-                        <img src="/placeholder.svg?height=80&width=80" 
+                        <img src="/assets/icons/créativité.svg" 
                              alt="" aria-hidden="true" class="charter-item__icon-img">
                     </div>
-                    <h3 class="charter-item__title">Diversité Culturelle</h3>
+                    <h3 class="charter-item__title">Créativité</h3>
                     <p class="charter-item__text">
-                        Nous célébrons la richesse de toutes les cultures musicales et promouvons la découverte
-                        d'artistes de tous horizons.
+                        Encourager l'expression artistique sous toutes ses formes, mettre en avant les jeunes talents locaux et émergents.
                     </p>
                 </article>
 
                 <article class="charter-item">
                     <div class="charter-item__icon">
-                        <img src="/placeholder.svg?height=80&width=80" 
+                        <img src="/assets/icons/durabillité.svg" 
                              alt="" aria-hidden="true" class="charter-item__icon-img">
                     </div>
                     <h3 class="charter-item__title">Éco-responsabilité</h3>
@@ -202,19 +201,7 @@
 
                 <article class="charter-item">
                     <div class="charter-item__icon">
-                        <img src="/placeholder.svg?height=80&width=80" 
-                             alt="" aria-hidden="true" class="charter-item__icon-img">
-                    </div>
-                    <h3 class="charter-item__title">Accessibilité</h3>
-                    <p class="charter-item__text">
-                        Le festival est accessible à tous avec des aménagements spécifiques pour les personnes
-                        à mobilité réduite et des tarifs solidaires.
-                    </p>
-                </article>
-
-                <article class="charter-item">
-                    <div class="charter-item__icon">
-                        <img src="/placeholder.svg?height=80&width=80" 
+                        <img src="/assets/icons/Proximité.svg" 
                              alt="" aria-hidden="true" class="charter-item__icon-img">
                     </div>
                     <h3 class="charter-item__title">Convivialité</h3>
