--- a/artistes.html
+++ b/artistes.html
@@ -86,35 +86,33 @@
             <article class="artist-card">
                 <a href="artiste-detail.html?id=1" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
-                             alt="DJ Sunrise" class="artist-card__img">
+                        <img src="/assets/img/Pomme.avif" 
+                             alt="Pomme" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
-                        <h2 class="artist-card__name">DJ Sunrise</h2>
+                        <h2 class="artist-card__name">Pomme</h2>
                         <p class="artist-card__info">20 Décembre - Scène Principale</p>
-                        <span class="artist-card__genre">Electro</span>
+                        <span class="artist-card__genre">pop indépendante</span>
                     </div>
                 </a>
             </article>
 
             <article class="artist-card">
-                <a href="artiste-detail.html?id=2" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
+                        <img src="/assets/img/Zaho de Sagazan.avif" 
                              alt="Les Échos Urbains" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
-                        <h2 class="artist-card__name">Les Échos Urbains</h2>
+                        <h2 class="artist-card__name">Zaho de Sagazan</h2>
                         <p class="artist-card__info">20 Décembre - Scène Principale</p>
-                        <span class="artist-card__genre">Hip-Hop</span>
+                        <span class="artist-card__genre">French indie</span>
                     </div>
                 </a>
             </article>
 
             <article class="artist-card">
-                <a href="artiste-detail.html?id=3" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
+                        <img src="/assets/img/Neon dream.avif" 
                              alt="Neon Dreams" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
@@ -126,23 +124,21 @@
             </article>
 
             <article class="artist-card">
-                <a href="artiste-detail.html?id=4" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
+                        <img src="/assets/img/acoustic.avif" 
                              alt="Acoustic Sessions" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
                         <h2 class="artist-card__name">Acoustic Sessions</h2>
-                        <p class="artist-card__info">21 Décembre - Scène Intimiste</p>
+                        <p class="artist-card__info">21 Décembre - Scène Principale</p>
                         <span class="artist-card__genre">Acoustique</span>
                     </div>
                 </a>
             </article>
 
             <article class="artist-card">
-                <a href="artiste-detail.html?id=5" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
+                        <img src="/assets/img/Bass collective.avif" 
                              alt="Bass Collective" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
@@ -154,9 +150,8 @@
             </article>
 
             <article class="artist-card">
-                <a href="artiste-detail.html?id=6" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
+                        <img src="/assets/img/Rock legend.avif" 
                              alt="Rock Legend" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
@@ -168,9 +163,8 @@
             </article>
 
             <article class="artist-card">
-                <a href="artiste-detail.html?id=7" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
+                        <img src="/assets/img/the midnight.avif" 
                              alt="Midnight Vibes" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
@@ -182,9 +176,8 @@
             </article>
 
             <article class="artist-card">
-                <a href="artiste-detail.html?id=8" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
+                        <img src="/assets/img/Ubran poet.avif" 
                              alt="Urban Poets" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
@@ -196,9 +189,8 @@
             </article>
 
             <article class="artist-card">
-                <a href="artiste-detail.html?id=9" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
+                        <img src="/assets/img/electro fusion.avif" 
                              alt="Electro Fusion" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
@@ -210,13 +202,12 @@
             </article>
 
             <article class="artist-card">
-                <a href="artiste-detail.html?id=10" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
+                        <img src="/assets/img/miki.avif" 
                              alt="Main Headliner" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
-                        <h2 class="artist-card__name">Main Headliner</h2>
+                        <h2 class="artist-card__name">Miki</h2>
                         <p class="artist-card__info">22 Décembre - Scène Principale</p>
                         <span class="artist-card__genre">Pop</span>
                     </div>
@@ -224,9 +215,8 @@
             </article>
 
             <article class="artist-card">
-                <a href="artiste-detail.html?id=11" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
+                        <img src="/assets/img/Farewell band.avif" 
                              alt="Farewell Band" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
@@ -238,9 +228,8 @@
             </article>
 
             <article class="artist-card">
-                <a href="artiste-detail.html?id=12" class="artist-card__link">
                     <div class="artist-card__image">
-                        <img src="/placeholder.svg?height=400&width=400" 
+                        <img src="/assets/img/Grand final.avif" 
                              alt="Grand Finale" class="artist-card__img">
                     </div>
                     <div class="artist-card__content">
