--- a/infos-pratiques.html
+++ b/infos-pratiques.html
@@ -163,7 +163,7 @@
             <div class="transport-grid">
                 <article class="transport-card">
                     <div class="transport-card__icon">
-                        <img src="/placeholder.svg?height=60&width=60" 
+                        <img src="/assets/icons/background.avif" 
                              alt="" aria-hidden="true" class="transport-card__icon-img">
                     </div>
                     <h3 class="transport-card__title">En Train</h3>
@@ -175,7 +175,7 @@
 
                 <article class="transport-card">
                     <div class="transport-card__icon">
-                        <img src="/placeholder.svg?height=60&width=60" 
+                        <img src="/assets/icons/background.avif" 
                              alt="" aria-hidden="true" class="transport-card__icon-img">
                     </div>
                     <h3 class="transport-card__title">En Voiture</h3>
@@ -187,7 +187,7 @@
 
                 <article class="transport-card">
                     <div class="transport-card__icon">
-                        <img src="/placeholder.svg?height=60&width=60" 
+                        <img src="/assets/icons/background.avif" 
                              alt="" aria-hidden="true" class="transport-card__icon-img">
                     </div>
                     <h3 class="transport-card__title">Navettes</h3>
