--- a/programme.html
+++ b/programme.html
@@ -112,7 +112,7 @@
                     <article class="programme-item">
                         <div class="programme-item__time">18:00</div>
                         <div class="programme-item__content">
-                            <h3 class="programme-item__artist">DJ Sunrise</h3>
+                            <h3 class="programme-item__artist">Pomme</h3>
                             <p class="programme-item__stage">Scène Principale</p>
                             <span class="programme-item__genre">Electro</span>
                         </div>
@@ -121,9 +121,9 @@
                     <article class="programme-item">
                         <div class="programme-item__time">20:00</div>
                         <div class="programme-item__content">
-                            <h3 class="programme-item__artist">Les Échos Urbains</h3>
+                            <h3 class="programme-item__artist">Zaho de Sagazan</h3>
                             <p class="programme-item__stage">Scène Principale</p>
-                            <span class="programme-item__genre">Hip-Hop</span>
+                            <span class="programme-item__genre">french Indie</span>
                         </div>
                     </article>
 
@@ -150,7 +150,7 @@
                         <div class="programme-item__time">16:00</div>
                         <div class="programme-item__content">
                             <h3 class="programme-item__artist">Acoustic Sessions</h3>
-                            <p class="programme-item__stage">Scène Intimiste</p>
+                            <p class="programme-item__stage">Scène Principale</p>
                             <span class="programme-item__genre">Acoustique</span>
                         </div>
                     </article>
@@ -213,7 +213,7 @@
                     <article class="programme-item">
                         <div class="programme-item__time">20:00</div>
                         <div class="programme-item__content">
-                            <h3 class="programme-item__artist">Main Headliner</h3>
+                            <h3 class="programme-item__artist">Miki</h3>
                             <p class="programme-item__stage">Scène Principale</p>
                             <span class="programme-item__genre">Pop</span>
                         </div>
@@ -242,7 +242,7 @@
                         <div class="programme-item__time">14:00</div>
                         <div class="programme-item__content">
                             <h3 class="programme-item__artist">Chill Out Session</h3>
-                            <p class="programme-item__stage">Scène Intimiste</p>
+                            <p class="programme-item__stage">Scène principale</p>
                             <span class="programme-item__genre">Ambient</span>
                         </div>
                     </article>
