--- a/scene-detail.html
+++ b/scene-detail.html
@@ -74,7 +74,7 @@
     <!-- Stage Detail Hero -->
     <section class="stage-detail-hero">
         <div class="stage-detail-hero__image">
-            <img src="/placeholder.svg?height=600&width=1400" 
+            <img src="/assets/img/scène.avif" 
                  alt="Scène Principale" class="stage-detail-hero__img">
         </div>
         <div class="stage-detail-hero__content">
