--- a/scenes.html
+++ b/scenes.html
@@ -86,7 +86,7 @@
             <article class="stage-card">
                 <a href="scene-detail.html?id=1" class="stage-card__link">
                     <div class="stage-card__image">
-                        <img src="/placeholder.svg?height=500&width=800" 
+                        <img src="/assets/img/scène.avif" 
                              alt="Scène Principale" class="stage-card__img">
                     </div>
                     <div class="stage-card__content">
@@ -100,9 +100,8 @@
             </article>
 
             <article class="stage-card">
-                <a href="scene-detail.html?id=2" class="stage-card__link">
                     <div class="stage-card__image">
-                        <img src="/placeholder.svg?height=500&width=800" 
+                        <img src="/assets/img/scene electro.avif" 
                              alt="Scène Électronique" class="stage-card__img">
                     </div>
                     <div class="stage-card__content">
@@ -114,23 +113,6 @@
                     </div>
                 </a>
             </article>
-
-            <article class="stage-card">
-                <a href="scene-detail.html?id=3" class="stage-card__link">
-                    <div class="stage-card__image">
-                        <img src="/placeholder.svg?height=500&width=800" 
-                             alt="Scène Intimiste" class="stage-card__img">
-                    </div>
-                    <div class="stage-card__content">
-                        <h2 class="stage-card__name">Scène Intimiste</h2>
-                        <p class="stage-card__description">
-                            Un espace plus cosy pour des performances acoustiques et des découvertes artistiques en petit comité.
-                        </p>
-                        <span class="stage-card__capacity">Capacité: 500 personnes</span>
-                    </div>
-                </a>
-            </article>
-
         </div>
     </section>
 
